# pmconv

./: .gitignore  README.md  TENSOR_KERNEL.md  setup.py
notebooks/: splinescnn.ipynb
pmconv/: __init__.py  basis.py  conv.py  spline_support.py  weighting.py
scripts/: example.py  example_slerp_polar.py
src/: Bspline1D.cpp  Bspline1D.h  CMakeLists.txt  LinearRegression.cpp  TridiagonalMatrix.cpp  TridiagonalMatrix.h  example_spline.cpp  matplotlibcpp.h  pmconv_bindings.cpp  spline_conv.cpp  spline_conv.h
tests/: test_pmconv.py
